@@ -1,15 +1,14 @@
 package pl.pilionerzy.controller;
 
-import com.google.common.collect.ImmutableMap;
 import org.hamcrest.Matchers;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.dao.DataAccessException;
 import org.springframework.http.MediaType;
-import org.springframework.test.context.junit4.SpringRunner;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 import pl.pilionerzy.dto.NewQuestionDto;
 import pl.pilionerzy.exception.GameException;
@@ -19,8 +18,8 @@ import pl.pilionerzy.model.Lifeline;
 import pl.pilionerzy.model.Prefix;
 
 import javax.validation.ConstraintViolationException;
+import java.util.Map;
 
-import static org.mockito.Answers.RETURNS_SMART_NULLS;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
@@ -28,9 +27,9 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 import static pl.pilionerzy.model.Lifeline.ASK_THE_AUDIENCE;
 
-@RunWith(SpringRunner.class)
+@ExtendWith(SpringExtension.class)
 @WebMvcTest(controllers = MainExceptionHandler.class)
-public class MainExceptionHandlerTest {
+class MainExceptionHandlerTest {
 
     @Autowired
     private MockMvc mvc;
@@ -42,8 +41,8 @@ public class MainExceptionHandlerTest {
     private QuestionController questionController;
 
     @Test
-    public void shouldHandleConstraintViolation() throws Exception {
-        var exception = mock(ConstraintViolationException.class, RETURNS_SMART_NULLS);
+    void shouldHandleConstraintViolation() throws Exception {
+        var exception = mock(ConstraintViolationException.class);
         when(questionController.add(isA(NewQuestionDto.class))).thenThrow(exception);
 
         mvc.perform(post("/questions")
@@ -62,7 +61,7 @@ public class MainExceptionHandlerTest {
     }
 
     @Test
-    public void shouldHandleMethodArgumentInvalid() throws Exception {
+    void shouldHandleMethodArgumentInvalid() throws Exception {
         mvc.perform(post("/questions")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content("{}"))
@@ -71,7 +70,7 @@ public class MainExceptionHandlerTest {
     }
 
     @Test
-    public void shouldHandleDataAccessException() throws Exception {
+    void shouldHandleDataAccessException() throws Exception {
         when(gameController.createNewGame()).thenThrow(mock(DataAccessException.class));
 
         mvc.perform(get("/games/start-new"))
@@ -80,18 +79,18 @@ public class MainExceptionHandlerTest {
     }
 
     @Test
-    public void shouldHandleGameException() throws Exception {
+    void shouldHandleGameException() throws Exception {
         when(gameController.sendAnswer(anyLong(), anyMap())).thenThrow(GameException.class);
 
         mvc.perform(post("/games/1/answers")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content("{\"selected\":\"A\"}"))
                 .andExpect(status().isBadRequest());
-        verify(gameController).sendAnswer(1L, ImmutableMap.of("selected", Prefix.A));
+        verify(gameController).sendAnswer(1L, Map.of("selected", Prefix.A));
     }
 
     @Test
-    public void shouldHandleLifelineException() throws Exception {
+    void shouldHandleLifelineException() throws Exception {
         when(gameController.getLifelineResult(anyLong(), isA(Lifeline.class))).thenThrow(LifelineException.class);
 
         mvc.perform(get("/games/1/ask-the-audience"))
@@ -100,13 +99,13 @@ public class MainExceptionHandlerTest {
     }
 
     @Test
-    public void shouldHandleNoSuchGameException() throws Exception {
+    void shouldHandleNoSuchGameException() throws Exception {
         when(gameController.sendAnswer(anyLong(), anyMap())).thenThrow(NoSuchGameException.class);
 
         mvc.perform(post("/games/1/answers")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content("{\"selected\":\"A\"}"))
                 .andExpect(status().isNotFound());
-        verify(gameController).sendAnswer(1L, ImmutableMap.of("selected", Prefix.A));
+        verify(gameController).sendAnswer(1L, Map.of("selected", Prefix.A));
     }
 }
